--- a/smartCitizenChallenge.html
+++ b/smartCitizenChallenge.html
@@ -141,7 +141,7 @@
     <p>발급일: <span id="today"></span></p>
   </div>
 
-  <button id="downloadBtn" onclick="downloadCard()">📸 시민증 캡처하기</button>
+  <button id="downloadBtn" onclick="downloadCard()">📸 인증서 캡처하기</button>
 
   <script>
     const answers = { 1: 'X', 2: 'X', 3: 'X', 4: 'O', 5: 'X' };
