--- a/sungil_digital_card.html
+++ b/sungil_digital_card.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
+    @media (prefers-color-scheme: dark) {
+      body, .card, #resultCard {
+        background-color: #ffffff !important;
+        color: #000000 !important;
+      }
+      input, button {
+        background-color: #ffffff !important;
+        color: #000000 !important;
+        border: 1px solid #ccc !important;
+      }
+    }
     body {
       font-family: sans-serif;
       padding: 20px;
