--- a/sungil_digital_card.html
+++ b/sungil_digital_card.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <meta name="color-scheme" content="light">
   <title>오늘의 디지털 약속 카드</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
