--- a/resume/index.html
+++ b/resume/index.html
@@ -1327,7 +1327,7 @@
             <div class="side-bar">
                 <img class="side-bar-logo w-full" src="image/basiclogo.svg" />
                 <div class="side-bar-profile">
-                    <img class="side-bar-profile-picture size-full" src="image/profile_image.jpeg" />
+                    <img class="side-bar-profile-picture size-full" src="image/profile_image.png" />
                 </div>
                 <div class="name-tag">
                     <div class="name font-bold">김형준</div>
@@ -1806,5 +1806,6 @@
         }
     </script>
 </body>
+
 
 </html>
