--- a/resume/index.html
+++ b/resume/index.html
@@ -1532,7 +1532,7 @@
                             <p class="intro-text-detail font-regular">
                                 새로운 기술을 빠르게 익히고 교육 현장에 적용하는 실천형 컴퓨터 교사입니다.
                                 <br />학생이 직접 만들며 배우는 과정을 중시하고, 웹·앱·AI·데이터베이스 등 실무 중심 수업을 설계합니다.
-                                <br />체계적인 준비와 세심한 설계로 학교의 디지털 혁신을 선도하는 교사로 성장하고 있습니다.
+                                &nbsp;체계적인 준비와 세심한 설계로 학교의 디지털 혁신을 선도하는 교사로 성장하고 있습니다.
                             </p>
                         </div>
                     </div>
@@ -1548,35 +1548,35 @@
                         <div class="exp-card-frame flex-center size-full">
                             <div class="exp-card">
                                 <div class="exp-card-period-wrapper flex-center">
-                                    <div class="exp-card-period font-regular">1년</div>
+                                    <div class="exp-card-period font-regular">6개월</div>
                                 </div>
                                 <div class="exp-card-company font-bold">
-                                    교무기획부
+                                    회사1
                                 </div>
-                                <div class="exp-card-term">2015.03~2016.02</div>
+                                <div class="exp-card-term">2023.01~2023.06</div>
                                 <div class="exp-card-team">
                                     <div class="exp-card-team-name font-bold">
-                                        업무
+                                        웹 개발팀, 주니어 개발자
                                     </div>
                                 </div>
                                 <div class="exp-card-task">
                                     <div class="point svg-filter"></div>
                                     <div class="exp-card-task-text font-regular">
-                                        교무 지원 업무
+                                        프론트엔드 개발 및 유지보수
                                     </div>
                                 </div>
                                 <div class="exp-card-proj">
                                     <div class="exp-card-proj-name font-bold">
-                                        수업
+                                        고객 관리 시스템 개선 프로젝트
                                     </div>
                                 </div>
                                 <div class="exp-card-task-term font-regular">
-                                    2015.03~2016.02
+                                    2023.02~2023.05
                                 </div>
                                 <div class="exp-card-task-detail">
                                     <div class="point svg-filter"></div>
                                     <div class="exp-card-task-detail-text font-regular">
-                                        ITQ 한글, 파포 / 스마트콘텐츠
+                                        React를 사용한 대시보드 UI 개선 및 성능 최적화
                                     </div>
                                 </div>
                             </div>
@@ -1809,3 +1809,4 @@
 
 
 </html>
+
