--- a/bingo/index.html
+++ b/bingo/index.html
@@ -3,30 +3,58 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>논술 빙고 게임</title>
-<!-- 🔽 기본 CSS 및 스크립트 -->
+<title>빙고 게임</title>
+
+<!-- 🔽 기본 CSS -->
 <link rel="stylesheet" href="style.css">
-<script src="data2.js"></script> <!-- 🔹여기 숫자만 바꿔서 data2.js, data3.js 로 교체 가능 -->
+
 </head>
 <body>
 
-<h2>🎴 논술 주제 빙고 게임</h2>
-<div class="grid" id="cardGrid"></div>
-
-<div class="explain-box" id="explainBox">
-  💬 카드가 뒤집히면 이곳에 교사용 부연 설명이 표시됩니다.
+<!-- ✅ ① 주제 선택 화면 -->
+<div id="setupScreen" class="setup-screen">
+  <h2>🎯 주제 선택</h2>
+  <div class="topic-buttons">
+    <button onclick="selectDataset('data1.js', '논술')">🗣️ 논술</button>
+    <button onclick="selectDataset('data2.js', '넌센스')">😂 넌센스</button>
+    <button onclick="selectDataset('data3.js', '상식')">💡 상식</button>
+  </div>
 </div>
 
-<div class="result-box" id="resultBox">
-  💬 팀 이름을 입력하면 색이 표시됩니다. (A팀🔵 / B팀🔴 / C팀🟢)
+<!-- ✅ ② 게임 모드 선택 화면 (아이템전 / 노아이템전) -->
+<div id="modeScreen" class="setup-screen" style="display:none;">
+  <h2>🎮 게임 모드 선택</h2>
+  <div class="mode-buttons">
+    <button onclick="setGameMode('normal')">🚫 노아이템전</button>
+    <button onclick="setGameMode('item')">🎁 아이템전</button>
+  </div>
 </div>
 
-<div class="controller">
+<!-- ✅ ③ 본 게임 화면 (초기엔 숨김 상태) -->
+<h2 id="gameTitle" style="display:none">🃏 빙고 게임</h2>
+
+<div class="grid" id="cardGrid" style="display:none"></div>
+
+<!-- ✅ 설명 박스 -->
+<div class="explain-box" id="explainBox" style="display:none;">
+  <button id="toggleExplainBtn" class="toggle-explain">📘 설명 보기</button>
+  <div id="explainContent" class="hidden">
+    💬 카드가 뒤집히면 이곳에 교사용 부연 설명이 표시됩니다.
+  </div>
+</div>
+
+<!-- ✅ 결과 박스 -->
+<div class="result-box" id="resultBox" style="display:none;">
+  💬 팀 이름을 입력하면 색이 표시됩니다. (A팀🔵 / B팀🔴 / C팀🟢 / D팀🟠)
+</div>
+
+<!-- ✅ 하단 컨트롤러 -->
+<div class="controller" style="display:none;">
   <button class="reset" onclick="resetBoard()">초기화</button>
 </div>
 
+<!-- ✅ 메인 스크립트 -->
+<script src="item.js"></script>
 <script src="main.js"></script>
 </body>
-
 </html>
-
